Enhancement Request 37422324 - [36856306->14.1.1.0.21] Even when snapshot creation fails, the snapshot is still visible in the snapshots list (14.1.1.0 cl 114157 --> 14.1.1.0 CE)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v14.1.1.0/": change = 114218]
